@@ -64,7 +64,7 @@ typedef struct memory_page {
 /* A memory page will be 1 << (this many) bytes in size
    ie 12 => 4 Kb, 13 => 8 Kb, 14 => 16 Kb
  */
-#define MEMORY_PAGE_SIZE_LOGARITHM 12
+#define MEMORY_PAGE_SIZE_LOGARITHM 11
 
 /* The actual size of a memory page */
 #define MEMORY_PAGE_SIZE ( 1 << MEMORY_PAGE_SIZE_LOGARITHM )
@@ -84,6 +84,9 @@ typedef struct memory_page {
 
 /* The number of memory pages in 4K */
 #define MEMORY_PAGES_IN_4K ( 1 << ( 12 - MEMORY_PAGE_SIZE_LOGARITHM ) )
+
+/* The number of memory pages in 4K */
+#define MEMORY_PAGES_IN_2K ( 1 << ( 11 - MEMORY_PAGE_SIZE_LOGARITHM ) )
 
 /* Each RAM chunk accessible by the Z80 */
 extern memory_page memory_map_read[MEMORY_PAGES_IN_64K];
@@ -143,6 +146,9 @@ void memory_map_romcs_8k( libspectrum_word address, memory_page source[] );
 
 /* Page in 4K from /ROMCS */
 void memory_map_romcs_4k( libspectrum_word address, memory_page source[] );
+
+/* Page in 2K from /ROMCS */
+void memory_map_romcs_2k( libspectrum_word address, memory_page source[] );
 
 libspectrum_byte readbyte( libspectrum_word address );
 
